2017-12-21  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-906
	
	* src/m_linerecord.cc:  Fixed bug reported by Oliver about
	precedence of operators. "not X < 0" is not "not (X < 0)"

2017-12-19  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-905
	
	* src/complex.{cc,h}, src/absorption.cc, src/linefunctions.{cc,h},
	src/matpackI.h, src/test_complex.cc:

	Remove ComplexRange class and replace all occurrences with the matpack
	Range class. Reduces code duplication.

2017-12-19  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-904
	
	* CMakeLists.txt, src/CMakeLists.txt, config.h.cmake, src/gui/*,
	src/main.cc, src/parameters.cc:

	Remove obsolete gui testing code.

2017-12-18  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-903
	
	Bug reported by Oliver and now fixed:  *AtFrequency
	functions renamed to *AtPosition.  Still a potential
	error with switched indexing in code protected by
	fortran-flags... (not enough ram here to activate these...)

2017-12-18  Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-902
	
	* src/propagationmatrix.{cc,h}:
	Update of PropagationMatrix and StokesVector so that their
	internal dimensions is Tensor4.  Should always default to
	0th element whenever an Index is not given.  Updated
	names of functions to reflect this change (resulting in
	some other files being touched as well.)
	
	Other files touched:
	src/doit.cc
	src/m_abs.cc
	src/m_abs_lookup.cc
	src/m_linerecord.cc
	src/m_rte.cc
	src/montecarlo.cc
	src/rte.cc
	src/test_propagationmatrix.cc
	src/xml_io_compound_types.cc
	
	Also removed the function begining on the HSE partial derivatives 
	since it would not work in that form.  If we assume T := exp(-K(x)r(x))
	we need the full derivative: -K(x)dr(x) - dK(x)r(x) as input.
	So we must know how the path changes alread when we are doing
	the propagation matrix computations.  If instead we assume ---
	as the present code does --- that T := exp(-K(x)r(x')),